<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text">0123456789</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Division">/</string>

    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Multiplication">*</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Substraction">-</string>

    <string name="_0">0</string>
    <string name="_clr">clr</string>
    <string name="Addition">+</string>

    <string name="Result">=</string>
    <string name="Dot">.</string>

</resources>