<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCD6D6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:gravity="end|bottom"
        android:padding="10dp"

        android:textSize="48sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_7"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_8"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_9"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Division"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>
          </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Multiplication"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnSubstraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Substraction"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Dot"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit" />
        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_clr"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onClear" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Addition"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:onClick="onDigit" >

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Result"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onEqual" />
            </LinearLayout>

</LinearLayout>